--- a/xbook-frontend/public/index.html
+++ b/xbook-frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="A Terminal-equse interface for Facebook"
+      content="A Terminal-equse interface"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,29 +28,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <script>
-      window.fbAsyncInit = function () {
-        FB.init({
-          appId: '578987416313778',
-          autoLogAppEvents: true,
-          xfbml: true,
-          version: 'v5.0'
-        });
-
-        // Broadcast an event when FB object is ready
-        var fbInitEvent = new Event('FBObjectReady');
-        document.dispatchEvent(fbInitEvent);
-      };
-
-      (function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) { return; }
-        js = d.createElement(s); js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
 
     <div id="root"></div>
     <!--
